--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "bootstrap-vue-3": "^0.2.5",
+    "bootstrap-vue-3": "^0.2.6",
     "dotenv": "^16.0.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
